# Shelfino_ROS2_unitn

./: .gitignore  Makefile  print.py  victims.csv
map_pkg/config/: map_config.yaml  map_config_test.yaml
map_pkg/src/: send_borders.cpp  send_gates.cpp
path_planning/: CMakeLists.txt  package.xml
path_planning/launch/: path_planning.launch.py
path_planning/src/: Dubins.cpp  Dubins.h  Follow_path.cpp  RRT.cpp  RRT.h  Utils.cpp  Utils.h  gyak.cpp  publisher_member_function.cpp
projects/: package.xml
projects/launch/: evacuation.launch.py  victims.launch.py
